<resources>
    <string name="app_name">My Application</string>
    <string name="home">Home</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="create_new">Create New</string>
    <string name="completed">Completed</string>
    <string name="pick_task">Pick Task</string>
    <string name="task_details">Task Details</string>
    <string name="logout">logout</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_task">HomeTaskActivity</string>
    <string name="count_one">counting</string>
    <string name="count_two">counting</string>
    <string name="count_three">counting</string>
    <string name="count_four">counting</string>
    <string name="count_five">counting</string>
    <string name="task_one">task</string>
    <string name="task_two">task</string>
    <string name="task_three">task</string>
    <string name="task_four">task</string>
    <string name="task_five">task</string>
    <string name="daily">daily % is</string>
    <string name="days_left"># days left are</string>
    <string name="better_me">BetterMe</string>
    <string name="hint_percentage">%</string>
    <string name="hint_task_title">Title</string>
    <string name="hint_description">"This will be the task description that will briefly explain what the task entails and ask them to enter the number of tasks/day they want to do."</string>
    <string name="hint_start_date">Date started</string>
    <string name="hint_start_time">Time started</string>
    <string name="hint_goal_number">Your goal</string>
    <string name="hint_task_tally">Task tally</string>
    <string name="hint_minute_number">Minutes</string>
    <string name="hint_boxes_checked"># Boxes</string>
    <string name="hint_username">Username</string>
    <string name="desc">image</string>
    <string name="email_input_label">Email:</string>
    <string name="username_input_label">Username:</string>
    <string name="password_input_label">Password:</string>
    <string name="goto_login_text">Already have an account? Login Here!</string>
    <string name="goto_signup_text">Need to setup an account? Sign-up Here!</string>
    <string name="signup_btn">SignUp!</string>
    <string name="login_btn">Log In!</string>
</resources>
