<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home"
        android:icon="@mipmap/ic_home_black_24dp"
        android:title="@string/home"/>

    <item android:id="@+id/pick_task"
        android:icon="@mipmap/ic_playlist_add_black_24dp"
        android:title="@string/pick_task"/>

    <item android:id="@+id/detail_task"
        android:icon="@mipmap/ic_playlist_play_black_24dp"
        android:title="@string/task_details"/>

    <item android:id="@+id/completed_task"
        android:icon="@mipmap/ic_playlist_add_check_black_24dp"
        android:title="@string/completed"/>

    <item android:id="@+id/logout"
        android:icon="@mipmap/ic_undo_black_24dp"
        android:title="@string/logout"/>

</menu>