<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_task_title"
            android:textColor="@color/secondaryTextColor"
            android:textSize="15sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/daily_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_toEndOf="@+id/task_title"
            android:layout_toRightOf="@+id/task_title"
            android:text="@string/daily"
            android:textColor="@color/secondaryTextColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/percent_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/daily_one"
            android:layout_alignBottom="@+id/daily_one"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_toLeftOf="@+id/days_left_one"
            android:layout_toStartOf="@+id/days_left_one"
            android:hint="@string/hint_percentage"
            android:textColor="@color/secondaryTextColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/days_left_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/percent_one"
            android:layout_alignBottom="@+id/percent_one"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/days_left"
            android:textColor="@color/secondaryTextColor"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/count_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/days_left_one"
            android:layout_alignBottom="@+id/days_left_one"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:textColor="@color/secondaryTextColor"
            android:textSize="15sp" />
    </RelativeLayout>

</LinearLayout>