<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context="com.example.louis.myapplication.SignupActivity">

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toRightOf="@+id/signup_email_textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/signup_email_textView"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_email_textView"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.43" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter desired username"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="@+id/signup_username_textView"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_username_textView"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/signup_email"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/signup_email" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Create password"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@+id/signup_password_textView"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_password_textView"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/signup_username"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/signup_username" />

    <Button
        android:id="@+id/signup_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_btn"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <TextView
        android:id="@+id/signup_goto_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goto_login_text"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_submit_btn"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/signup_email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_input_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp" />

    <TextView
        android:id="@+id/signup_username_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username_input_label"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/signup_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_input_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_username_textView" />

</android.support.constraint.ConstraintLayout>
