<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true"
    tools:context="com.example.louis.myapplication.LoginActivity">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter your email"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toRightOf="@+id/login_email_textView"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="@+id/login_email_textView"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_email_textView"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.43" />


    <EditText
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter password"
        android:inputType="textPassword"
        app:layout_constraintTop_toTopOf="@+id/login_password_textView"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/login_password_textView"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/login_email"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/login_email" />

    <Button
        android:id="@+id/login_submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/login_goto_signup_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:text="@string/goto_signup_text"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/login_submit_btn"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/login_email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_input_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="45dp" />

    <TextView
        android:id="@+id/login_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_input_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/login_email_textView" />

</android.support.constraint.ConstraintLayout>
